--- a/src/main/webapp/memberShip/membership_scheme_discount_channelling_by_department.xhtml
+++ b/src/main/webapp/memberShip/membership_scheme_discount_channelling_by_department.xhtml
@@ -44,7 +44,7 @@
                                 <p:inputText autocomplete="off" value="#{opdMemberShipDiscountController.margin}" />
                                 <h:outputLabel value="" />
                                 <p:commandButton id="btnAdd" value="Add" ajax="false" 
-                                                action="#{opdMemberShipDiscountController.saveSelectedDepartment}" />
+                                                 action="#{opdMemberShipDiscountController.saveChannellingDiscountMatrixForDepartment()}" />
 
                                 <p:defaultCommand target="btnAdd"/>
                             </p:panelGrid>
