--- a/src/main/webapp/membership/administration.xhtml
+++ b/src/main/webapp/membership/administration.xhtml
@@ -39,7 +39,7 @@
 
 
 
-                                        <p:commandButton ajax="false" value="Membership Scheme Names" 
+                                        <p:commandButton ajax="false" value="Memberships" 
                                                          action="/membership/membership_scheme"></p:commandButton>
                                     </p:panelGrid>
                                 </p:tab>
@@ -51,7 +51,7 @@
                                         <p:commandButton ajax="false" value="Channelling Discounts" 
                                                          action="#{opdMemberShipDiscountController.toManageDiscountMatrixForChannellingByDepartment()}"></p:commandButton>
                                         <p:commandButton  action="/membership/membership_scheme_discount_inward" value="Inward Discounts for Memberships"  ajax="false" rendered="#{webUserController.hasPrivilege('MemberShipInwardMemberShipSchemesDicounts')}"/>
-                                        <p:commandButton  action="/membership/membership_scheme_discount_opd_by_department" value="OPD Discounts for Members by Department" actionListener="#{opdMemberShipDiscountController.recreateModel()}" ajax="false" rendered="#{webUserController.hasPrivilege('MemberShipOpdMemberShipDisByDepartment')}"/>
+                                        <p:commandButton  action="#{opdMemberShipDiscountController.toManageDiscountMatrixForOpdByDepartment()}" value="OPD Discounts for Members by Department" actionListener="#{opdMemberShipDiscountController.recreateModel()}" ajax="false" rendered="#{webUserController.hasPrivilege('MemberShipOpdMemberShipDisByDepartment')}"/>
                                         <p:commandButton  action="/membership/membership_scheme_discount_opd_by_category" value="OPD Discounts for Members by Opd Category" actionListener="#{opdMemberShipDiscountController.recreateModel()}"  ajax="false" rendered="#{webUserController.hasPrivilege('MemberShipOpdMemberShipDisByCategory')}"/>
                                         <p:commandButton  action="/membership/membership_scheme_discount_pharmacy_by_category" value="OPD Discounts for Members by Pharmaceutical Category " actionListener="#{opdMemberShipDiscountController.recreateModel()}"  ajax="false" rendered="#{webUserController.hasPrivilege('MemberShipOpdMemberShipDisByCategory')}"/>
                                     </p:panelGrid>
