--- a/src/main/webapp/membership/administration.xhtml
+++ b/src/main/webapp/membership/administration.xhtml
@@ -53,10 +53,18 @@
                                         <p:commandButton  action="/membership/membership_scheme_discount_inward" value="Inward Discounts for Memberships"  ajax="false" rendered="#{webUserController.hasPrivilege('MemberShipInwardMemberShipSchemesDicounts')}"/>
                                         <p:commandButton  action="#{opdMemberShipDiscountController.toManageDiscountMatrixForOpdByDepartment()}" value="OPD Discounts for Members by Department" actionListener="#{opdMemberShipDiscountController.recreateModel()}" ajax="false" rendered="#{webUserController.hasPrivilege('MemberShipOpdMemberShipDisByDepartment')}"/>
                                         <p:commandButton  action="/membership/membership_scheme_discount_opd_by_category" value="OPD Discounts for Members by Opd Category" actionListener="#{opdMemberShipDiscountController.recreateModel()}"  ajax="false" rendered="#{webUserController.hasPrivilege('MemberShipOpdMemberShipDisByCategory')}"/>
-                                        <p:commandButton  action="/membership/membership_scheme_discount_pharmacy_by_category" value="OPD Discounts for Members by Pharmaceutical Category " actionListener="#{opdMemberShipDiscountController.recreateModel()}"  ajax="false" rendered="#{webUserController.hasPrivilege('MemberShipOpdMemberShipDisByCategory')}"/>
+                                        <p:commandButton  action="#{opdMemberShipDiscountController.toManageDiscountMatrixForPharmacyByDepartmentAndCategory()}" value="OPD Discounts for Members by Pharmaceutical Category " actionListener="#{opdMemberShipDiscountController.recreateModel()}"  ajax="false" rendered="#{webUserController.hasPrivilege('MemberShipOpdMemberShipDisByCategory')}"/>
                                     </p:panelGrid>
 
 
+                                </p:tab>
+                                <p:tab title="Set Up" >
+                                    <p:panelGrid columns="1" >
+                                        <p:commandButton action="#{pharmacyUpdateBulkController.makeAllPharmaceuticalsToAllowDiscount()}" 
+                                                         value="Make All Pharmacy Items Discountable" onclick="if (! confirm('Are you sure?')) return false"
+                                                         ajax="false" rendered="#{webUserController.hasPrivilege('MembershipSchemes')}"/>
+                                        
+                                    </p:panelGrid>
                                 </p:tab>
 
                             </p:tabView>
