--- a/src/main/webapp/membership/add_family.xhtml
+++ b/src/main/webapp/membership/add_family.xhtml
@@ -90,7 +90,7 @@
                                                            itemLabel="#{r.name}" itemValue="#{r}" ></f:selectItems>
                                         </p:selectOneMenu>
 
-                                        
+
                                         <p:spacer></p:spacer>
                                         <p:commandButton ajax="false" value="Add as a Family Member"
                                                          action="#{patientController.addNewMemberToFamily()}">
@@ -122,18 +122,22 @@
                                     <p:column headerText="Billing">
 
                                         <p:commandButton ajax="false" action="/opd_bill"  actionListener="#{billController.prepareNewBillForMember()}" 
-                                                         value="OPD" rendered="#{webUserController.hasPrivilege('OpdBilling')}" >
+                                                         value="OPD" disabled="#{!webUserController.hasPrivilege('OpdBilling')}" >
                                             <f:setPropertyActionListener value="#{fm.patient}" target="#{billController.searchedPatient}" ></f:setPropertyActionListener>
                                         </p:commandButton>
                                         <p:commandButton ajax="false" action="/channel/channel_booking" 
                                                          actionListener="#{channelBillController.prepareForNewChannellingBillForMember()}" 
-                                                         value="Channelling" rendered="#{webUserController.hasPrivilege('ChannellingChannelBooking')}" >
+                                                         value="Channelling" disabled="#{!webUserController.hasPrivilege('ChannellingChannelBooking')}" >
                                             <f:setPropertyActionListener value="#{fm.patient}" target="#{channelBillController.searchPatient}" ></f:setPropertyActionListener>
                                         </p:commandButton>
                                         <p:commandButton ajax="false" action="/pharmacy/pharmacy_bill_retail_sale" 
                                                          actionListener="#{pharmacySaleController.prepareNewPharmacyBillForMembers()}" 
-                                                         value="Phamacy" rendered="#{webUserController.hasPrivilege('ChannellingChannelBooking')}" >
+                                                         value="Phamacy" disabled="#{!webUserController.hasPrivilege('ChannellingChannelBooking')}" >
                                             <f:setPropertyActionListener value="#{fm.patient}" target="#{pharmacySaleController.searchedPatient}" ></f:setPropertyActionListener>
+                                        </p:commandButton>
+                                        <p:commandButton ajax="false" action="#{admissionController.toAdmitAMember()}" 
+                                                         value="Admit" disabled="#{!webUserController.hasPrivilege('InwardAdmissionsAdmission')}" >
+                                            <f:setPropertyActionListener value="#{fm.patient}" target="#{admissionController.current.patient}" ></f:setPropertyActionListener>
                                         </p:commandButton>
 
                                     </p:column>
